so head some elements to the html for beginning and end of game. used a .hide selector to toggle which elements are visible through the quiz. finally used logic in the js to make sure that the time was ending at both when the counter reached zero and when there were no questions left from the quizQuestions array

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ h4 {
     position: absolute;
     display: flex;
     justify-content: center;
-    height: 50px;
+    height: 30px;
     width: 120px;
     top: 50%;
     left: 50%;
